# HomeWork_11

HomeWork_11.1/HW_11_STAT_LIB/: HW_11_STAT_LIB.sln
HomeWork_11.1/HW_11_STAT_LIB/HW_11_STAT_LIB/: Greeter.cpp  Greeter.h  HW_11_STAT_LIB.vcxproj
HomeWork_11.1/HW_11_STAT_LIB_CLIENT/: HW_11_STAT_LIB_CLIENT.cpp  HW_11_STAT_LIB_CLIENT.vcxproj  HW_11_STAT_LIB_CLIENT.vcxproj.filters
HomeWork_11.2/HW_11_DYNAMIC_LIB/: HW_11_DYNAMIC_LIB.sln
HomeWork_11.2/HW_11_DYNAMIC_LIB/HW_11_DYNAMIC_LIB/: HW_11_DYNAMIC_LIB.vcxproj  Leaver.cpp  Leaver.h
HomeWork_11.2/HW_11_DYNAMIC_LIB_CLIENT/: HW_11_DYNAMIC_LIB_CLIENT.cpp  HW_11_DYNAMIC_LIB_CLIENT.vcxproj  HW_11_DYNAMIC_LIB_CLIENT.vcxproj.filters
HomeWork_11.3/: CMakeLists.txt  HW_11.3_DYNAMIC_LIB_CIENT.cpp
HomeWork_11.3/HW_11.3_DYNAMIC_LIB/: CMakeLists.txt  Leaver.h
HomeWork_11.4/DYNAMIC_LIB/: Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Quadrangle.cpp  Quadrangle.h  Rectangle_.cpp  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.h  Triangle.cpp  Triangle.h
HomeWork_11.4/DYNAMIC_LIB/DYNAMIC_LIB/: DYNAMIC_LIB.sln
HomeWork_11.4/DYNAMIC_LIB/DYNAMIC_LIB/DYNAMIC_LIB/: DYNAMIC_LIB.vcxproj  DYNAMIC_LIB.vcxproj.filters
HomeWork_11.4/Homework_11.4/: Homework_11.4.cpp  Homework_11.4.vcxproj
HomeWork_11.5/: CMakeLists.txt
HomeWork_11.5/DYNAMIC_LIB/: CMakeLists.txt  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Rectangle_.h  Square.cpp
