cmake_minimum_required (VERSION 3.10)
set(CMAKE_CCX_STANDART 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
project(HW_11.3_DYNAMIC_LIB_CIENT)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
include_directories(HW_11.3_DYNAMIC_LIB)
set(SOURCE_EXE HW_11.3_DYNAMIC_LIB_CIENT.cpp)
add_executable(HW_11.3_DYNAMIC_LIB_CIENT ${SOURCE_EXE})
add_subdirectory(HW_11.3_DYNAMIC_LIB)
target_link_libraries(HW_11.3_DYNAMIC_LIB_CIENT HW_11.3_DYNAMIC_LIB)