cmake_minimum_required (VERSION 3.10)
set(CMAKE_CCX_STANDART 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
project(HW_11.5_DYNAMIC_LIB_CIENT)
include_directories(DYNAMIC_LIB)
set(SOURCE_EXE Homework_11.5.cpp)
add_executable(HW_11.5_DYNAMIC_LIB_CIENT ${SOURCE_EXE})
add_subdirectory(DYNAMIC_LIB)
target_link_libraries(HW_11.5_DYNAMIC_LIB_CIENT DYNAMIC_LIB)